--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,12 +2,12 @@
   width: calc(100% / 4 - 1.5rem);
   background-color: var(--color-elements);
   box-shadow: var(--box-shadow);
-  border-radius: 0.25rem;
+  border-radius: var(--border-radius);
 
   img {
     width: 100%;
     aspect-ratio: 5 / 3;
-    border-radius: 0.25rem 0.25rem 0 0;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
   }
 
   .content {
