--- a/src/components/FilterBar/FilterBar.module.scss
+++ b/src/components/FilterBar/FilterBar.module.scss
@@ -2,5 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2.5rem;
+
+  gap: 2rem;
+
+  @media (width < 576px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
