--- a/src/components/FilterBar/components/Search/Search.module.scss
+++ b/src/components/FilterBar/components/Search/Search.module.scss
@@ -1,10 +1,15 @@
 .search {
   position: relative;
-  max-width: calc(100% / 8 * 3);
   width: 100%;
+  height: 60px;
+
+  @media (width > 576px) {
+    max-width: calc(100% / 8 * 3);
+  }
+
   input {
     width: 100%;
-    height: 40px;
+    height: 100%;
     background-color: var(--color-elements);
     box-shadow: var(--box-shadow);
     outline: none;
@@ -12,6 +17,7 @@
     border: none;
     padding-left: 56px;
     border-radius: var(--border-radius);
+    font-size: inherit;
   }
 
   svg {
