--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,5 +1,13 @@
 .list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
   gap: 2rem;
+
+  @media (width > 576px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (width > 1024px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
