--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 
 :root {
   --font-size-home: 14px;
-  --font-size-details: 18px;
+  --font-size-details: 16px;
   --box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 2px 3px 0px,
     rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
   --border-radius: 0.25rem;
+  --size-header-height: 80px;
 }
 
 *,
@@ -43,5 +44,29 @@ body {
 }
 
 .main {
-  padding-top: 80px;
+  padding-top: calc(var(--size-header-height) + 2.5rem);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  outline: none;
+  color: inherit;
+  cursor: pointer;
+  font-size: inherit;
+  border-radius: var(--border-radius);
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+}
+
+ul {
+  list-style: none;
 }
