--- a/src/components/FilterBar/components/Search/Search.module.scss
+++ b/src/components/FilterBar/components/Search/Search.module.scss
@@ -7,6 +7,12 @@
     max-width: calc(100% / 8 * 3);
   }
 
+  &.error {
+    input {
+      border-color: red;
+    }
+  }
+
   input {
     width: 100%;
     height: 100%;
@@ -14,7 +20,7 @@
     box-shadow: var(--box-shadow);
     outline: none;
     color: inherit;
-    border: none;
+    border: 1px solid transparent;
     padding-left: 56px;
     border-radius: var(--border-radius);
     font-size: inherit;
@@ -26,5 +32,12 @@
     transform: translateY(-50%);
     left: 1rem;
     font-size: 24px;
+  }
+
+  p {
+    position: absolute;
+
+    color: red;
+    margin-top: 1rem;
   }
 }
